--- a/css/style.css
+++ b/css/style.css
@@ -674,6 +674,8 @@ body {
     border-radius: 5px;
     z-index: 10000;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    max-width: 80%;
+    text-align: center;
 }
 
 /* Styles for info message */
